[package]
name = "axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"